# pinephone

./: README.md
circuitpython/: code.py  requirements.txt
framebuffer-display/: Cargo.toml
framebuffer-display/src/: backup.rs  lib.rs
framebuffer-gui/: Cargo.toml
framebuffer-gui/src/: main.rs
rust/framebuffer-gui/: Cargo.toml
